--- a/src/app/styles/components/_ads.scss
+++ b/src/app/styles/components/_ads.scss
@@ -47,7 +47,7 @@
             left: calc((100% - 1920px) / 2);
             width: 100%;
             z-index: 0;
-            position: fixed;
+            position: absolute;
             top: $ad-wallpaper-top-mobile;
         }
     }
