--- a/src/app/styles/components/_page.scss
+++ b/src/app/styles/components/_page.scss
@@ -8,4 +8,10 @@
     overflow-x: hidden;
     position: relative;
     width: 100%;
+
+    &__content-header {
+        @media #{$medium-up} {
+            padding-top: 215px;
+        }
+    }
 }
